# langgraph-api-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
scripts/: check_dirty_files.sh  generate_api_sdk.sh  generate_templates.sh  verify_version.sh
templates/: model.mustache  model_mod.mustache
templates/reqwest/: api.mustache  api_mod.mustache  configuration.mustache
tests/: api_test.rs  models_test.rs
tests/files/: weather.txt
